--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.399</version>
+    <version>1.424</version>
   </parent>
   <artifactId>release</artifactId>
   <packaging>hpi</packaging>
@@ -41,6 +41,12 @@
   		<groupId>org.jenkins-ci.plugins</groupId>
   		<artifactId>promoted-builds</artifactId>
   		<version>2.0</version>
+  		<optional>true</optional>
+  	</dependency>
+	<dependency>
+  		<groupId>com.cloudbees</groupId>
+  		<artifactId>maven-license-plugin</artifactId>
+  		<version>1.7</version>
   		<optional>true</optional>
   	</dependency>
   </dependencies>
