--- a/pom.xml
+++ b/pom.xml
@@ -43,12 +43,12 @@
   		<version>2.0</version>
   		<optional>true</optional>
   	</dependency>
-	<!--<dependency>
+	<dependency>
   		<groupId>com.cloudbees</groupId>
   		<artifactId>maven-license-plugin</artifactId>
   		<version>1.7</version>
   		<optional>true</optional>
-  	</dependency>-->
+  	</dependency>
   </dependencies>
 
 
